--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.15.4",
-    "@mui/material": "^5.15.2",
+    "@mui/lab": "^5.0.0-alpha.160",
+    "@mui/material": "^5.15.4",
+    "@mui/x-date-pickers": "^6.19.0",
+    "@mui/x-date-pickers-pro": "^5.0.0-alpha.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^3.2.0",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "remove-node-modules": "^1.7.6",
     "web-vitals": "^2.1.4"
